hide format fieldsets

--- a/themes/ec_default/css/style.less
+++ b/themes/ec_default/css/style.less
@@ -705,6 +705,9 @@ html.js input.throbbing {
   margin-right: 0.6em; /* LTR */
 }
 
+.text-format-wrapper > a.ckeditor_links { display: none !important; }
+.text-format-wrapper > fieldset.filter-wrapper.form-wrapper { display: none; }
+
 /* -------------- Other Overrides ------------- */
 
 div.password-suggestions {
