enhance admin screens

--- a/themes/ec_default/css/colors.less
+++ b/themes/ec_default/css/colors.less
@@ -147,7 +147,7 @@ a {
   &:visited { color: @link_color; }
 }
 
-.nav-pills > li > a {
+#main-menu-links.nav-pills > li > a {
   border: 1px solid lighten(@primary_tab_bg_color,10%);
   text-decoration: none !important;
   &:hover { 
@@ -156,7 +156,7 @@ a {
     border-color: transparent;
   }
 }
-.nav-pills {
+#main-menu-links.nav-pills {
   .active > a { 
     color: @primary_tab_text_color;
     background: @primary_tab_bg_color;
