theme menu communities

--- a/themes/ec_default/css/style.less
+++ b/themes/ec_default/css/style.less
@@ -497,6 +497,11 @@ ul.links {
     text-decoration: none;
   }
 }
+ul.nav {
+  a {
+    text-decoration: none;
+  }
+}
 ul.nav-tabs {
   margin-top: 10px !important;
 }
