update left sidebar styles

--- a/themes/ec_default/css/style.less
+++ b/themes/ec_default/css/style.less
@@ -427,8 +427,8 @@ ul.links {
 }
 
 /* ------------------ Sidebar ----------------- */
-.layout-left .block input[type=text],
-.layout-left .block input[type=password] {
+.layout-left input[type=text],
+.layout-left input[type=password] {
   width: 158px;
 }
 
@@ -782,6 +782,9 @@ div.vertical-tabs .vertical-tabs-panes fieldset.vertical-tabs-pane {
 }
 #search-form .form-item-keys label {
   display: block;
+}
+#search-block-form input.form-text {
+  width: 100px;
 }
 
 /* --------------- Search Results ---------------- */
