--- a/themes/ec_default/css/hack.css
+++ b/themes/ec_default/css/hack.css
@@ -40,3 +40,11 @@ fieldset legend {
 .btn-info {
   color: #fff !important;
 }
+.layout-left .form-actions {
+  background-color: transparent;
+  border-top: none;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding: 0;
+  text-align: center;
+}
