Move communities menu

--- a/themes/ec_default/css/style.less
+++ b/themes/ec_default/css/style.less
@@ -431,6 +431,10 @@ ul.links {
 .layout-left input[type=password] {
   width: 158px;
 }
+.layout-left .item-list ul li {
+  margin: 0;
+  padding: 0;
+}
 
 /* ----------------- Triptych ----------------- */
 
