--- a/themes/ec_default/css/style.less
+++ b/themes/ec_default/css/style.less
@@ -718,7 +718,7 @@ html.js input.throbbing {
 }
 
 .text-format-wrapper > a.ckeditor_links { display: none !important; }
-.text-format-wrapper > fieldset.filter-wrapper.form-wrapper { display: none; }
+.text-format-wrapper > fieldset.filter-wrapper.form-wrapper div.form-type-select { /*display: none;*/ }
 
 .vertical-tabs .form-type-textfield input {
   -moz-box-sizing: content-box;
