put main menu in a block hide format fieldset for non-administrators

--- a/themes/ec_default/css/style.less
+++ b/themes/ec_default/css/style.less
@@ -184,7 +184,7 @@ ul.tips {
 }
 
 /* --------------- Main Menu ------------ */
-#main-menu-links {
+#block-system-main-menu {
   a {
     text-decoration: none;
     font-size: 110%;
