--- a/themes/ec_default/css/colors.less
+++ b/themes/ec_default/css/colors.less
@@ -147,7 +147,7 @@ a {
   &:visited { color: @link_color; }
 }
 
-#main-menu-links.nav-pills > li > a {
+#block-system-main-menu.nav-pills > li > a {
   border: 1px solid lighten(@primary_tab_bg_color,10%);
   text-decoration: none !important;
   &:hover { 
@@ -155,15 +155,15 @@ a {
     color: @primary_tab_text_color;
     border-color: transparent;
   }
-}
-#main-menu-links.nav-pills {
-  .active > a { 
+  &.active {
     color: @primary_tab_text_color;
     background: @primary_tab_bg_color;
     text-shadow: 1px 1px (#fff - @primary_tab_text_color);
     border-color: transparent;
-    &:hover { background: lighten(@primary_tab_bg_color,10%); }
+    &:hover { background: lighten(@primary_tab_bg_color,10%); }  
   }
+}
+#block-system-main-menu.nav-pills {
   &.nav {
     li > a {
       &:hover { background: lighten(@primary_tab_bg_color,10%); }
