add options for custom links

--- a/themes/ec_default/css/colors.less
+++ b/themes/ec_default/css/colors.less
@@ -95,6 +95,24 @@ table {
     &:hover { color: @block_link_hover_color; };
     &:active { color: @block_link_active_color; };
     &:focus { color: @block_link_active_color; };
+    &.btn-danger { 
+      color: #fff;
+      &:hover { color: #fdd; };
+      &:active { color: #fdd; };
+      &:focus { color: #fdd; };      
+    }
+    &.btn-success { 
+      color: #fff;
+      &:hover { color: #dfd; };
+      &:active { color: #dfd; };
+      &:focus { color: #dfd; };      
+    }    
+    &.btn-warning { 
+      color: #fff;
+      &:hover { color: #fed; };
+      &:active { color: #fed; };
+      &:focus { color: #fed; };      
+    }       
   }  
 }
 
