--- a/themes/ec_default/css/style.less
+++ b/themes/ec_default/css/style.less
@@ -295,6 +295,9 @@ h1#page-title {
 .meta {
   font-size: 0.9em;
   margin-bottom: -5px;
+  .form-item {
+    margin: 0;
+  }
 }
 .submitted .user-picture img {
   float: left; /* LTR */
