manage top right block for search and tools

--- a/sites/all/themes/ec_default/css/hack-ie.css
+++ b/sites/all/themes/ec_default/css/hack-ie.css
@@ -1,4 +1,5 @@
 /* Hack for EC css */
-.layout-content {
-  padding-top: 15px;
+.layout-noright #additional-tools li {
+  margin: 0;
+  padding: 0;
 }
