--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -755,14 +755,13 @@ div.vertical-tabs .vertical-tabs-panes fieldset.vertical-tabs-pane {
 /* --------------- Search Form ---------------- */
 
 #block-search-form {
-  padding-bottom: 7px;
+  padding-bottom: 5px;
 }
 #block-search-form .content {
   margin-top: 0;
 }
 #search-form input#edit-keys,
 #block-search-form .form-item-search-block-form input {
-  float: left; /* LTR */
   font-size: 1em;
   height: 1.143em;
   margin-right: 5px;
@@ -1044,4 +1043,9 @@ div.admin-panel .description {
   -webkit-border-radius: 0 0 4px 4px;
      -moz-border-radius: 0 0 4px 4px;
           border-radius: 0 0 4px 4px;
+}
+
+/* ---------------- user menu  ----------------- */
+#block-system-user-menu li a {
+  font-size: 0.9em;
 }
