--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -253,11 +253,6 @@ ul.tips {
   margin-top: 10px;
   clear: both;
 }
-h1#page-title {
-  font-size: 2em;
-  line-height: 1;
-  clear: both;
-}
 .node .content {
   font-size: 1em;
 }
@@ -983,6 +978,9 @@ div.admin-panel .description {
   a {
     text-decoration: none;
   }
+}
+a.btn {
+  text-decoration: none;
 }
 
 /* ---------------- faq  ----------------- */
