Theme user profile

--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -543,9 +543,17 @@ ul.secondary {
 
 /* -------------- User Profile   -------------- */
 
-.profile .user-picture {
-  float: none;
+.profile {
+  .user-picture {
+    float: none;
+  }
+  h3 {
+    border: none;
+    padding-top: 0;
+    margin-top: 0;
+  }
 }
+
 
 /* -------------- Password Meter  ------------- */
 
