--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -587,6 +587,12 @@ fieldset {
   border: 1px solid #cccccc;
   padding: 10px;
   margin: 10px 0;
+  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.08) inset;
+     -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.08) inset;
+          box-shadow: 0 1px 5px rgba(0, 0, 0, 0.08) inset;  
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;          
 }
 
 /* Contact Form */
