initiate template for block--multisite-og-button--og-contextual-links.tpl.php some small tweaks on hacks.css

--- a/sites/all/themes/ec_default/css/hack.css
+++ b/sites/all/themes/ec_default/css/hack.css
@@ -10,7 +10,8 @@
   padding-top: 15px;
 }
 .layout-left {
-  margin-left: 5px;
+    margin-left: 5px;
+    margin-top: 44px;
 }
 .layout-noright #additional-tools {
   margin-right: -5px;
@@ -53,10 +54,11 @@ fieldset legend {
   margin-top: 1px;
 }
 .nav-list .nav-header {
-  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1) inset;
+  /*-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1) inset;
      -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1) inset;
-          box-shadow: 0 0 5px rgba(0, 0, 0, 0.1) inset;  
-  -webkit-border-radius: 4px;
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.1) inset;  */
+ /* -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
-          border-radius: 4px; 
+          border-radius: 4px; */
+	margin-top:18px;	  
 }
