update user profile

--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1072,3 +1072,11 @@ a.btn {
 #block-system-user-menu li a {
   font-size: 0.9em;
 }
+
+/* ---------------- user profile  ----------------- */
+.profile .no_label .field-label {
+  display: none;
+}
+.profile .field {
+  margin-bottom: 10px;
+}
