--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1074,9 +1074,14 @@ a.btn {
 }
 
 /* ---------------- user profile  ----------------- */
+.profile .field {
+  float: left;
+  clear: left;
+  padding-bottom: 10px;
+}
 .profile .no_label .field-label {
   display: none;
 }
-.profile .field {
-  margin-bottom: 10px;
+.profile .no_label .field {
+  padding-bottom: 0;
 }
