-MULTISITE-177 +worklog:6h +comment theme news view

--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -516,7 +516,7 @@ ul.nav {
   }
 }
 ul.nav-tabs {
-  margin-top: 10px !important;
+  margin-top: 12px !important;
 }
 ul.action-links {
   list-style: none;
@@ -1084,4 +1084,12 @@ a.btn {
 }
 .profile .no_label .field {
   padding-bottom: 0;
+}
+
+/* ---------------- news  ----------------- */
+#slider.news {
+  height: 200px;
+  .news_content {
+    div.news { display: none; }
+  }
 }
