-MULTISITE-177 +comment theme news view

--- a/sites/all/themes/ec_default/css/colors.less
+++ b/sites/all/themes/ec_default/css/colors.less
@@ -191,3 +191,16 @@ a {
 .meta { color: #999999; }
 
 .layout-footer { color: @link_color; }
+
+/* ---------------- news  ----------------- */
+#slider.news {
+  .block-views > .content {
+    background-color: @body_color;
+    /*border-left: 1px solid #DDDDDD;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;*/
+  }
+  .news_list {
+    background-color: @block_bg_color;
+  }
+}
