--- a/sites/all/themes/ec_default/css/colors.less
+++ b/sites/all/themes/ec_default/css/colors.less
@@ -196,9 +196,9 @@ a {
 #slider.news {
   .block-views > .content {
     background-color: @body_color;
-    /*border-left: 1px solid #DDDDDD;
+    border-left: 1px solid #DDDDDD;
     border-top: 1px solid #DDDDDD;
-    border-bottom: 1px solid #DDDDDD;*/
+    border-bottom: 1px solid #DDDDDD;
   }
   .news_list {
     background-color: @block_bg_color;
