--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1092,6 +1092,10 @@ a.btn {
   clear: both;
   .block-views > .content {
     height: 150px;
+    h3 {
+      margin-top: 0;
+      padding-top: 0;
+    }
   }
   .news_content {
     div.news { display: none; }
@@ -1100,5 +1104,7 @@ a.btn {
     padding-left: 0;
     margin-top: 0 !important;
     height: 150px;
+    position: relative;
+    top: -1px;
   }
 }
