--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1092,6 +1092,7 @@ a.btn {
   clear: both;
   .block-views > .content {
     height: 150px;
+    padding-left: 10px;
     h3 {
       margin-top: 0;
       padding-top: 0;
