--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1090,6 +1090,10 @@ a.btn {
 #slider.news {
   display: block;
   clear: both;
+  .attachment {
+    position: absolute;
+    right: 0;
+  }
   .block-views > .content {
     height: 150px;
     padding-left: 10px;
