--- a/sites/all/themes/ec_default/css/colors.less
+++ b/sites/all/themes/ec_default/css/colors.less
@@ -194,7 +194,7 @@ a {
 
 /* ---------------- news  ----------------- */
 #slider.news {
-  .block-views > .content {
+  .content > .view-news > .news_content {
     background-color: @body_color;
     border-left: 1px solid #DDDDDD;
     border-top: 1px solid #DDDDDD;
