--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1103,9 +1103,6 @@ a.btn {
       margin-top: 0;
       padding-top: 0;
     }
-    .picture {
-      float: left;
-    }
   }
   .content > .view-news > .news_content {
     -webkit-border-radius: 4px 0 0 4px;
@@ -1118,6 +1115,10 @@ a.btn {
       text-align: justify;    
       display: none; 
       height: 150px;
+    }
+    div.news > a > img {
+      float: left;
+      padding: 10px 10px 0 0;
     }
   }
   .news_list {
@@ -1132,5 +1133,17 @@ a.btn {
 .node-community {
   .thumb {
     margin: 11px 10px;
+  }
+}
+
+/* ---------------- Events  ----------------- */
+.view .date-nav-wrapper {
+  .date-prev {
+    background-color: transparent;
+    left: 0;
+    right: auto;
+  }
+  .date-next {
+    background-color: transparent;
   }
 }
