--- a/sites/all/themes/ec_default/css/colors.less
+++ b/sites/all/themes/ec_default/css/colors.less
@@ -114,6 +114,11 @@ table {
       &:focus { color: #fed; };      
     }       
   }  
+  &.alt {
+    background-color: #D9EDF7;
+    border-color: #BCE8F1;
+    color: @text_color;
+  }
 }
 
 .nav-tabs {
@@ -201,7 +206,7 @@ a {
     border-bottom: 1px solid #DDDDDD;
   }
   .news_list {
-    background-color: @block_bg_color;
+    background-color: #D9EDF7;
   }
 }
 
