--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1090,6 +1090,13 @@ a.btn {
 #slider.news {
   display: block;
   clear: both;
+  margin-top: 20px;
+  padding: 10px;
+  h2 {
+    line-height: 24px;
+    padding: 0;
+    margin: 0;
+  }
   .attachment {
     .view-content:after {
       display: none;
@@ -1147,3 +1154,14 @@ a.btn {
     background-color: transparent;
   }
 }
+
+/* ---------------- Workbench  ----------------- */
+div.workbench-info-block {
+  background-color: transparent;
+  color: inherit;
+  border: none;
+  font-size: 1em;
+  padding: 0;
+}
+
+
