--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -152,6 +152,9 @@ ul.menu li {
 ul.tips {
   padding: 0 0 0 1.25em; /* LTR */
 }
+a.context-block-region {
+  display: none !important;
+}
 
 /* ------------------ Header ------------------ */
 #skip-link {
