--- a/sites/all/themes/ec_default/css/layout.css
+++ b/sites/all/themes/ec_default/css/layout.css
@@ -40,7 +40,7 @@ body,
   margin: 0 0 0 115px;
 }
 .region-featured{
-  margin: 0 200px 0 0;
+  margin: 0 0 0 0;
 }
 .region-tools {
   float: right;
