--- a/sites/all/themes/ec_default/css/colors.less
+++ b/sites/all/themes/ec_default/css/colors.less
@@ -94,6 +94,7 @@ table {
     background-color: #D9EDF7;
     border-color: #BCE8F1;
     color: @text_color;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   }
 }
 
