--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1137,4 +1137,22 @@ div.workbench-info-block {
   padding: 0;
 }
 
+/* ---------------- 3 columns grid  ----------------- */
+.grid3 {
+  table {
+    width: 100%;
+    td { 
+      width: 33%; 
+      padding: 10px 15px;
+    }
+    th { 
+      width: 33%; 
+      padding: 10px 15px;
+    }
+  }
+}
 
+/* ---------------- Region top  ----------------- */
+.region-content-top {
+  margin-bottom: 20px;
+}
