--- a/sites/all/themes/ec_default/css/layout.css
+++ b/sites/all/themes/ec_default/css/layout.css
@@ -37,7 +37,8 @@ body,
 }
 #block-system-main-menu {
   display: block;
-  margin: 0 0 0 115px;
+  margin: 0;
+  padding: 0 15px;
 }
 .region-featured{
   margin: 0 0 0 0;
