--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1145,3 +1145,14 @@ div.workbench-info-block {
     }
   }
 }
+
+/* ---------------- Feature set  ----------------- */
+#feature-set-admin-form {
+  .feature-set {
+    left: 10px;
+  }
+  .feature-set-image {
+    width: 55px;
+    text-align: center;
+  }
+}
