--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -276,7 +276,7 @@ a.context-block-region {
   margin: 1px 5px 0 0; /* LTR */
 }
 .field-type-taxonomy-term-reference {
-  margin: 0 0 1.2em;
+  margin: 0;
 }
 .field-type-taxonomy-term-reference .field-label {
   font-weight: normal;
