--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1132,6 +1132,11 @@ a.btn {
     background-color: transparent;
   }
 }
+#block-views-calendar-upcoming-events {
+  blockquote.date {
+    margin: 5px 0;
+  }
+}
 
 /* ---------------- Workbench  ----------------- */
 div.workbench-info-block {
@@ -1142,7 +1147,7 @@ div.workbench-info-block {
   padding: 0;
 }
 
-/* ---------------- 3 columns grid  ----------------- */
+/* ---------------- grids  ----------------- */
 .grid3 {
   table {
     width: 100%;
@@ -1153,6 +1158,21 @@ div.workbench-info-block {
     }
     th { 
       width: 33%; 
+      padding: 10px 15px;
+      vertical-align: top;
+    }
+  }
+}
+.grid4 {
+  table {
+    width: 100%;
+    td { 
+      width: 25%; 
+      padding: 10px 15px;
+      vertical-align: top;
+    }
+    th { 
+      width: 25%; 
       padding: 10px 15px;
       vertical-align: top;
     }
