--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -1,9 +1,9 @@
 /* $Id: style.css,v 1.53 2011/01/04 06:23:29 dries Exp $ */
 
-.border-radius (@top_left: 5px, @top_right: 5px, @bottom_right: 5px, @bottom_left: 5px) {
+.border_radius (@top_left: 4px, @top_right: 4px, @bottom_right: 4px, @bottom_left: 4px) {
   -webkit-border-radius: @arguments;
-  -moz-border-radius: @arguments;
-  border-radius: @arguments;
+     -moz-border-radius: @arguments;
+          border-radius: @arguments;
 }
 .f_right {
   float: right;
@@ -65,10 +65,10 @@ kbd {
   color: #666;
   display: inline-block;
   padding: 0 6px;
-  /*-webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;*/
-  .border-radius;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+  /*.border_radius(5px);*/
 }
 pre {
   background-color: #f2f2f2;
@@ -145,10 +145,10 @@ a.context-block-region {
   line-height: 1.7;
   padding: 1px 10px 2px 10px;
   text-decoration: none;
-  /*-webkit-border-radius: 0 0 10px 10px;
-  -moz-border-radius: 0 0 10px 10px;
-  border-radius: 0 0 10px 10px;*/
-  .border-radius(0,0,10px,10px);
+  -webkit-border-radius: 0 0 10px 10px;
+     -moz-border-radius: 0 0 10px 10px;
+          border-radius: 0 0 10px 10px;
+  /*.border_radius(0,0,10px,10px);*/
 }
 #skip-link a:hover,
 #skip-link a:active,
@@ -565,44 +565,25 @@ fieldset {
           box-shadow: 0 1px 5px rgba(0, 0, 0, 0.08) inset;  
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
-          border-radius: 4px;          
+          border-radius: 4px;
+  /*.border_radius;*/
 }
 
 /* Contact Form */
 .contact-form #edit-name {
   width: 75%;
-  /*-webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;*/
-  .border-radius;
 }
 .contact-form #edit-mail {
   width: 75%;
-  /*-webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;*/
-  .border-radius;
 }
 .contact-form #edit-subject {
   width: 75%;
-  /*-webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;*/
-  .border-radius;
 }
 .contact-form #edit-message {
   width: 76.3%;
-  -webkit-border-radius: 5px 5px 0 0;
-  -moz-border-radius: 5px 5px 0 0;
-  border-radius: 5px 5px 0 0;
-  //.border-radius(5px,5px,0,0);
 }
 .contact-form .resizable-textarea .grippie {
   width: 76%;
-  /*-webkit-border-radius: 0 0 5px 5px;
-  -moz-border-radius: 0 0 5px 5px;
-  border-radius: 0 0 5px 5px;*/
-  .border-radius(0,0,5px,5px);
 }
 
 /* Disabled form elements */
@@ -641,10 +622,10 @@ html.js input.throbbing {
 .comment-form input,
 .comment-form .form-select {
   margin: 0;
-  /*-webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;*/
-  .border-radius;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+  /*.border-radius(5px);*/
 }
 .comment-form .form-type-textarea label {
   float: none;
@@ -686,10 +667,10 @@ html.js input.throbbing {
   margin-bottom: 0.5em;
 }
 .comment-form .form-textarea {
-  /*-webkit-border-radius: 5px 5px 0 0;
-  -moz-border-radius: 5px 5px 0 0;
-  border-radius: 5px 5px 0 0;*/
-  .border-radius(5px,5px,0,0);
+  -webkit-border-radius: 5px 5px 0 0;
+     -moz-border-radius: 5px 5px 0 0;
+          border-radius: 5px 5px 0 0;
+  /*.border-radius(5px,5px,0,0);*/
 }
 .comment-form fieldset.filter-wrapper .fieldset-wrapper,
 .comment-form .text-format-wrapper .form-item {
@@ -998,6 +979,7 @@ a.btn {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+  /*.border_radius;*/
 }
 .subnav .nav {
   margin-bottom: 0;
@@ -1014,6 +996,7 @@ a.btn {
   -webkit-border-radius: 0;
      -moz-border-radius: 0;
           border-radius: 0;
+  /*.border_radius(0);*/
 }
 .subnav .nav > .active > a,
 .subnav .nav > .active > a:hover {
@@ -1037,6 +1020,7 @@ a.btn {
   -webkit-border-radius: 4px 0 0 4px;
      -moz-border-radius: 4px 0 0 4px;
           border-radius: 4px 0 0 4px;
+  /*.border_radius(4px 0 0 4px);*/
 }
 .subnav .nav > li:last-child > a {
   border-right: 0;
@@ -1045,6 +1029,7 @@ a.btn {
   -webkit-border-radius: 0 0 4px 4px;
      -moz-border-radius: 0 0 4px 4px;
           border-radius: 0 0 4px 4px;
+  /*.border_radius(0 0 4px 4px);*/
 }
 
 /* ---------------- user menu  ----------------- */
@@ -1092,7 +1077,8 @@ a.btn {
   .content > .view-news > .news_content {
     -webkit-border-radius: 4px 0 0 4px;
        -moz-border-radius: 4px 0 0 4px;
-            border-radius: 4px 0 0 4px;     
+            border-radius: 4px 0 0 4px;
+    /*.border_radius(4px 0 0 4px);*/
     div.news { 
       padding-left: 15px;
       padding-right: 15px;
