--- a/sites/all/themes/ec_default/css/hack.less
+++ b/sites/all/themes/ec_default/css/hack.less
@@ -32,6 +32,9 @@
 .title-en {
   background-image: url("../images/title/title_en.gif");
 }
+.title {
+  background-image: url("../images/title/title.gif");
+}
 .layout-body {
   margin-top: 0;
 }
