--- a/sites/all/themes/ec_default/css/style.less
+++ b/sites/all/themes/ec_default/css/style.less
@@ -127,6 +127,32 @@ a.context-block-region {
 }
 
 /* ------------------ Header ------------------ */
+/*@font-face {
+  font-family: ec_font;
+  src: local(ec_font), url('../font/PFSquareSansPro-Regular.ttf') format('opentype');
+}
+#main_title {
+  font-family: ec_font;
+  color: #0065a2;
+  text-transform: uppercase;
+  font-size: 28px !important;
+  position: absolute;
+  z-index: 10;
+  left: 245px;
+  top: 65px;
+  text-decoration: none;
+}
+#sub_title {
+  font-family: ec_font;
+  color: #fff;
+  font-size: 21px !important;
+  position: absolute;
+  z-index: 10;
+  left: 245px;
+  top: 100px;
+  text-decoration: none;
+}*/
+
 #skip-link {
   left: 50%;
   margin-left: -5.25em;
